[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claudectx-py"
version = "1.1.2"
description = "Python wrapper for claudectx — reduce Claude Code token usage by up to 80%"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["claude", "claude-code", "tokens", "anthropic", "ai", "llm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/Horilla/claudectx"
Repository = "https://github.com/Horilla/claudectx-py"
"Bug Tracker" = "https://github.com/Horilla/claudectx/issues"

[project.scripts]
claudectx = "claudectx_py:main"

[tool.setuptools.packages.find]
where = ["src"]
